@@ -10,7 +10,6 @@ import gnu.trove.map.hash.TLongObjectHashMap;
 import gnu.trove.set.TLongSet;
 import gnu.trove.set.hash.TLongHashSet;
 import java.util.ArrayList;
-import java.util.Arrays;
 import java.util.Collection;
 import java.util.Collections;
 import java.util.HashMap;
@@ -84,6 +83,11 @@ public class OSMDatabase {
   /* All bike parking areas */
   private final List<Area> bikeParkingAreas = new ArrayList<>();
 
+  /**
+   * Boarding location ways where passengers wait for transit
+   */
+  private final List<Area> boardingLocationAreas = new ArrayList<>();
+
   /* Map of all area OSMWay for a given node */
   private final TLongObjectMap<Set<OSMWay>> areasForNode = new TLongObjectHashMap<>();
 
@@ -127,9 +131,11 @@ public class OSMDatabase {
    * the United States. This does not affect floor names from level maps.
    */
   public boolean noZeroLevels = true;
+  private final Set<String> boardingAreaRefTags;
 
-  public OSMDatabase(DataImportIssueStore issueStore) {
+  public OSMDatabase(DataImportIssueStore issueStore, Set<String> boardingAreaRefTags) {
     this.issueStore = issueStore;
+    this.boardingAreaRefTags = boardingAreaRefTags;
   }
 
   public OSMNode getNode(Long nodeId) {
@@ -176,6 +182,10 @@ public class OSMDatabase {
     return Collections.unmodifiableCollection(bikeParkingAreas);
   }
 
+  public Collection<Area> getBoardingLocationAreas() {
+    return List.copyOf(boardingLocationAreas);
+  }
+
   public Collection<Long> getTurnRestrictionWayIds() {
     return Collections.unmodifiableCollection(turnRestrictionsByFromWay.keySet());
   }
@@ -217,7 +227,11 @@ public class OSMDatabase {
       carParkingNodes.put(node.getId(), node);
     }
     if (
-      !(waysNodeIds.contains(node.getId()) || areaNodeIds.contains(node.getId()) || node.isStop())
+      !(
+        waysNodeIds.contains(node.getId()) ||
+        areaNodeIds.contains(node.getId()) ||
+        node.isBoardingLocation()
+      )
     ) {
       return;
     }
@@ -245,7 +259,14 @@ public class OSMDatabase {
     }
 
     /* filter out ways that are not relevant for routing */
-    if (!(OSMFilter.isWayRoutable(way) || way.isParkAndRide() || way.isBikeParking())) {
+    if (
+      !(
+        OSMFilter.isWayRoutable(way) ||
+        way.isParkAndRide() ||
+        way.isBikeParking() ||
+        way.isBoardingLocation()
+      )
+    ) {
       return;
     }
 
@@ -256,7 +277,8 @@ public class OSMDatabase {
       (
         way.isTag("area", "yes") ||
         way.isTag("amenity", "parking") ||
-        way.isTag("amenity", "bicycle_parking")
+        way.isTag("amenity", "bicycle_parking") ||
+        way.isBoardingLocation()
       ) &&
       way.getNodeRefs().size() > 2
     ) {
@@ -738,7 +760,7 @@ public class OSMDatabase {
         }
       }
       try {
-        newArea(new Area(way, Arrays.asList(way), Collections.emptyList(), nodesById));
+        newArea(new Area(way, List.of(way), Collections.emptyList(), nodesById));
       } catch (Area.AreaConstructionException | Ring.RingConstructionException e) {
         // this area cannot be constructed, but we already have all the
         // necessary nodes to construct it. So, something must be wrong with
@@ -831,7 +853,7 @@ public class OSMDatabase {
         if (relation.isTag("railway", "platform") && !way.hasTag("railway")) {
           way.addTag("railway", "platform");
         }
-        if (relation.isTag("public_transport", "platform") && !way.hasTag("public_transport")) {
+        if (relation.isPlatform() && !way.hasTag("public_transport")) {
           way.addTag("public_transport", "platform");
         }
       }
@@ -857,6 +879,12 @@ public class OSMDatabase {
     }
     if (area.parent.isBikeParking()) {
       bikeParkingAreas.add(area);
+    }
+    if (
+      area.parent.isBoardingLocation() &&
+      !area.parent.getMultiTagValues(boardingAreaRefTags).isEmpty()
+    ) {
+      boardingLocationAreas.add(area);
     }
   }
 
